fixed styling strike-through not correctly registering on checkmark being clicked. Also ensured colours of accordion stays when accordion is expanded/collapsed.

--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -5,28 +5,6 @@
   }
 }
 
-.Mui-checked {
-  text-decoration: line-through;
-}
-
-.list {
-  &__item {
-    &--soon {
-      background: yellow;
-    }
-    &--kind-of-soon {
-      background: red;
-    }
-    &--not-soon {
-      background: green;
-    }
-
-    &--inactive {
-      background: purple;
-    }
-  }
-}
-
 .flex {
   &-container {
     display: flex;
